pod-security-vpol/baseline/disallow-host-path/.kyverno-test-controllers/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unsafe-disallow-host-path-1
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: unsafe-disallow-host-path-2
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unsafe-disallow-host-path-3
spec:
  serviceName: app
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: unsafe-disallow-host-path-4
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: ReplicationController
metadata:
  name: unsafe-disallow-host-path-5
spec:
  selector:
    app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: data
        hostPath:
          path: /var/lib
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: Job
metadata:
  name: unsafe-disallow-host-path-6
spec:
  template:
    metadata:
      labels:
        app: app
    spec:
      restartPolicy: Never
      volumes:
      - name: data
        hostPath:
          path: /var/lib
      containers:
      - name: app
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: unsafe-disallow-host-path-7
spec:
  schedule: "*/5 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: app
        spec:
          restartPolicy: Never
          volumes:
          - name: data
            hostPath:
              path: /var/lib
          containers:
          - name: app
            image: ghcr.io/kyverno/test-busybox:1.35
